[tool.poetry]
name = "nix-templates-python-poetry"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
numpy = "^2.1.0"
requests = "^2.32.5"
requests-cache = "^1.2.1"
pymupdf = "^1.26.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

